# atomic_test_case

./: .gitignore  CMakeLists.txt  colorobject.cxx  colorobject.h  main.cxx  objectmanager.cxx  objectmanager.h  task.txt  Тестовое_задание_для_кандидата_Dev.docx
case/: CMakeLists.txt  objectmanager.h
case/includes/: colorobject.h
case/tests/: CMakeLists.txt  tests.cxx
include/: colorobject.h  objectmanager.h
scr/: main.cxx  objectmanager.cxx
tests/: CMakeLists.txt  tests.cxx
